--- a/src/templates/verify-email.html
+++ b/src/templates/verify-email.html
@@ -6,6 +6,6 @@
     <title>Verify</title>
   </head>
   <body>
-    <a target="_blank" href="">click on</a>
+    <a target="_blank" href="{{verifyLink}}">click on</a>
   </body>
 </html>
